--- a/po/it.po
+++ b/po/it.po
@@ -7,50 +7,33 @@ msgstr ""
 "Project-Id-Version: Wike\n"
 "Language: it\n"
 
-#: ../src/view.py:143
+#: ../src/view.py:154
 msgid "Article not found"
 msgstr "Articolo non trovato"
 
-#: ../src/view.py:144
+#: ../src/view.py:155
 msgid "Can't find any results for requested query"
 msgstr "Impossibile trovare risultati per la domanda richiesta"
 
-#: ../src/view.py:146
+#: ../src/view.py:157
 msgid "Can't access Wikipedia"
 msgstr "Impossibile accedere a Wikipedia"
 
-#: ../src/view.py:147
+#: ../src/view.py:158
 msgid "Check your Internet connection and try again"
 msgstr "Controlla la tua connessione Internet e riprova"
 
-#: ../src/view.py:219
-msgid "Recent articles"
-msgstr "Articoli recenti"
-
-#: ../src/window.py:144 ../src/window.py:249
+#: ../src/window.py:150 ../src/window.py:255
 msgid "New bookmark: "
 msgstr "Nuovo segnalibro: "
 
-#: ../src/window.py:307
+#: ../src/window.py:313
 msgid "Wikipedia URL copied to clipboard"
 msgstr "URL di Wikipedia copiato negli appunti"
 
 #: ../src/search.py:249
 msgid "Default search language: "
 msgstr "Lingua di ricerca predefinita: "
-
-#. Don't remove format tags!
-#: ../src/bookmarks.py:46
-msgid "<b>No bookmarks</b>\n"
-"\n"
-"<small>Use the <i>Add Bookmark</i> button\n"
-"or click a link with the middle mouse button\n"
-"to add bookmarks to the list</small>"
-msgstr "<b>Nessun segnalibro</b>\n"
-"\n"
-"<small>Utilizza il pulsante <i>Aggiungi segnalibro</i>\n"
-"oppure fai clic su un link con il pulsante centrale del mouse\n"
-"per aggiungere segnalibri all'elenco</small>"
 
 #: ../src/bookmarks.py:137
 msgid "Clear Bookmarks List?"
@@ -75,18 +58,19 @@ msgid "Search and read Wikipedia articles\n"
 "and available under CC BY-SA 3.0 unless otherwise noted"
 msgstr "Cerca e leggi articoli di Wikipedia\n"
 "Tutto il contenuto da Wikipedia.org\n"
-"e disponibile sotto CC BY-SA 3.0 se non diversamente specificato"
+"è disponibile sotto CC BY-SA 3.0 se non diversamente specificato"
 
 #. Add your name like this:
 #. 
 #. Hugo Olabera <hugolabe@gmail.com>
 #: ../data/ui/about.ui:13
 msgid "translator-credits"
-msgstr "Albano Battistella"
+msgstr "Albano Battistella\n"
+"Michael Moroni <michaelmoroni@disroot.org>"
 
 #: ../data/ui/bookmarks.ui:58
 msgid "Add Bookmark"
-msgstr "Aggiungi Segnalibro"
+msgstr "Aggiungi segnalibro"
 
 #: ../data/ui/shortcuts.ui:14
 msgctxt "shortcut window"
@@ -96,7 +80,7 @@ msgstr "Generale"
 #: ../data/ui/shortcuts.ui:18
 msgctxt "shortcut window"
 msgid "Table of contents"
-msgstr "Tavola dei contenuti"
+msgstr "Indice dei contenuti"
 
 #: ../data/ui/shortcuts.ui:25
 msgctxt "shortcut window"
@@ -188,15 +172,11 @@ msgctxt "shortcut window"
 msgid "Add bookmark"
 msgstr "Aggiungi segnalibro"
 
-#: ../data/ui/menu.ui:8
+#: ../src/prefs.py:81 ../data/ui/menu.ui:8
 msgid "Wikipedia Main Page"
 msgstr "Pagina principale di Wikipedia"
 
-#: ../src/prefs.py:75 ../data/ui/menu.ui:13
-msgid "Random article"
-msgstr "Articolo casuale"
-
-#: ../data/ui/menu.ui:18
+#: ../src/view.py:234 ../data/ui/menu.ui:18
 msgid "Recent Articles"
 msgstr "Articoli recenti"
 
@@ -214,7 +194,7 @@ msgstr "Apri la pagina Wikipedia nel browser"
 
 #: ../data/ui/menu.ui:40
 msgid "Copy Wikipedia URL to Clipboard"
-msgstr "Copia l'URL di Wikipedia negli Appunti"
+msgstr "Copia l'URL di Wikipedia negli appunti"
 
 #: ../data/ui/menu.ui:46
 msgid "Preferences"
@@ -232,53 +212,21 @@ msgstr "A proposito di Wike"
 msgid "Behavior"
 msgstr "Comportamento"
 
-#: ../data/ui/prefs.ui:23
-msgid "When Wike starts load"
-msgstr "Quando Wike inizia a caricare"
-
-#: ../data/ui/prefs.ui:29
+#: ../data/ui/prefs.ui:135
 msgid "Keep a list of recent articles"
 msgstr "Tieni un elenco degli articoli recenti"
-
-#: ../data/ui/prefs.ui:43
-msgid "Clear bookmarks list on exit"
-msgstr "Cancella l'elenco dei segnalibri all'uscita"
-
-#: ../src/prefs.py:75
-msgid "Last article"
-msgstr "Ultimo articolo"
-
-#: ../data/ui/prefs.ui:61
-msgid "Appearance"
-msgstr "Aspetto"
-
-#: ../data/ui/prefs.ui:64
-msgid "Font size for articles"
-msgstr "Dimensione del carattere per gli articoli"
 
 #: ../data/ui/prefs.ui:14
 msgid "General"
 msgstr "Generale"
 
-#: ../data/ui/prefs.ui:105
-msgid "Filter available languages"
-msgstr "Filtra le lingue disponibili"
-
-#: ../data/ui/prefs.ui:139
-msgid "Select all"
-msgstr "Seleziona tutto"
-
-#: ../data/ui/prefs.ui:151
-msgid "Select none"
-msgstr "Non selezionare niente"
-
-#: ../data/ui/prefs.ui:99
+#: ../data/ui/prefs.ui:178
 msgid "Languages"
 msgstr "Lingue"
 
 #: ../data/ui/header-spinner.ui:23
 msgid "Loading Article"
-msgstr "Carica Articolo"
+msgstr "Carica articolo"
 
 #. Don't translate app name!
 #: ../data/com.github.hugolabe.Wike.desktop.in:3
@@ -291,11 +239,6 @@ msgstr "Wike"
 msgid "Wikipedia Reader"
 msgstr "Lettore di Wikipedia"
 
-#. Don't translate!
-#: ../data/com.github.hugolabe.Wike.desktop.in:5
-msgid "com.github.hugolabe.Wike"
-msgstr "com.github.hugolabe.Wike"
-
 #. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
 msgid "Wikipedia;Encyclopedia;"
@@ -303,7 +246,7 @@ msgstr "Wikipedia; Enciclopedia;"
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:11
 msgid "Wike is a Wikipedia reader for the GNOME Desktop. Provides access to all the content of this online encyclopedia in a native application, with a simpler and distraction-free view of articles."
-msgstr "Wike è un lettore di Wikipedia per il desktop GNOME. Fornisce accesso a tutto il contenuto di questa enciclopedia online in un'applicazione nativa, con una visualizzazione degli articoli più semplice e priva di distrazioni."
+msgstr "Wike è un lettore di Wikipedia per GNOME. Fornisce accesso a tutto il contenuto di questa enciclopedia online in un'applicazione nativa, con una visualizzazione degli articoli più semplice e priva di distrazioni."
 
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:20
 msgid "Multiple languages"
@@ -325,7 +268,7 @@ msgstr "Ricerca testuale negli articoli"
 msgid "Article table of contents"
 msgstr "Indice dei contenuti dell'articolo"
 
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
+#: ../data/ui/header.ui:136 ../data/com.github.hugolabe.Wike.metainfo.xml.in:26
 msgid "View article in other languages"
 msgstr "Visualizza l'articolo in altre lingue"
 
@@ -333,19 +276,172 @@ msgstr "Visualizza l'articolo in altre lingue"
 msgid "Features:"
 msgstr "Caratteristiche:"
 
-#: ../src/prefs.py:75
-msgid "Wikipedia main page"
-msgstr "Pagina principale di Wikipedia"
-
-#: ../data/ui/prefs.ui:81
-msgid "Use custom font for articles"
-msgstr "Usa caratteri personalizzati per gli articoli"
-
 #: ../data/ui/menu.ui:50
 msgid "Dark Mode"
 msgstr "Modalità scura"
 
-#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:28
 msgid "Dark mode"
 msgstr "Modalità scura"
+
+#: ../data/com.github.hugolabe.Wike.metainfo.xml.in:27
+msgid "GNOME Shell search integration"
+msgstr "Integrazione della ricerca in GNOME Shell"
+
+#: ../src/prefs.py:146
+msgid "Clear Historic?"
+msgstr "Rimuovi la cronologia?"
+
+#: ../src/prefs.py:147
+msgid "The history of visited articles will be deleted permanently."
+msgstr "La cronologia degli articoli visitati sarà permanentemente cancellata."
+
+#: ../src/prefs.py:148
+msgid "Clear Historic"
+msgstr "Rimuovi cronologia"
+
+#: ../src/prefs.py:165
+msgid "Clear Personal Data?"
+msgstr "Rimuovi dati personali?"
+
+#: ../src/prefs.py:166
+msgid "Cookies and cache data will be deleted permanently."
+msgstr "I dati dei cookie e cache saranno permanentemente cancellati."
+
+#: ../src/prefs.py:167
+msgid "Clear Data"
+msgstr "Rimuovi dati"
+
+#. Don't remove %s tag!
+#: ../src/wike-sp.in:71
+msgid "Search «%s» in Wikipedia"
+msgstr "Cerca «%s» su Wikipedia"
+
+#: ../data/ui/prefs.ui:23
+msgid "Home page"
+msgstr "Pagina principale"
+
+#: ../data/ui/prefs.ui:24
+msgid "The page that will be displayed when Wike starts"
+msgstr "La pagina che viene mostrata quando Wike viene avviato"
+
+#: ../data/ui/prefs.ui:30
+msgid "Clear bookmarks on exit"
+msgstr "Rimuovi i segnalibri alla chiusura"
+
+#: ../data/ui/prefs.ui:31
+msgid "The bookmarks list will be cleared when exiting Wike"
+msgstr "La lista dei segnalibri verrà azzerata quando Wike verrà chiuso"
+
+#: ../data/ui/prefs.ui:49
+msgid "Article View"
+msgstr "Visualizzazione dell'articolo"
+
+#: ../data/ui/prefs.ui:52
+msgid "Font size"
+msgstr "Dimensione del font"
+
+#: ../data/ui/prefs.ui:53
+msgid "Font size for article view (default is 16)"
+msgstr "Dimensione del font per la visualizzazione dell'articolo (il valore predefinito è 16)"
+
+#: ../data/ui/prefs.ui:70
+msgid "Use custom font"
+msgstr "Usa un font personalizzato"
+
+#: ../data/ui/prefs.ui:71
+msgid "Choose a font for the article view"
+msgstr "Scegli un font per la visualizzazione dell'articolo"
+
+#: ../data/ui/prefs.ui:84
+msgid "Preview popups in article links"
+msgstr "Popup di anteprima sui link degli articoli"
+
+#: ../data/ui/prefs.ui:85
+msgid "Show a preview of the article when hovering over a link"
+msgstr "Mostra un'anteprima dell'articolo quando il mouse si trova sopra un link"
+
+#: ../data/ui/prefs.ui:104
+msgid "Privacy"
+msgstr "Privacy"
+
+#: ../data/ui/prefs.ui:110
+msgid "Search"
+msgstr "Ricerca"
+
+#: ../data/ui/prefs.ui:113
+msgid "Allow live search on desktop"
+msgstr "Permetti ricerca live sul desktop"
+
+#: ../data/ui/prefs.ui:114
+msgid "Warning: all desktop searches will be sent to Wikipedia"
+msgstr "Attenzione: tutte le ricerche fatte da desktop saranno inviate a Wikipedia"
+
+#: ../data/ui/prefs.ui:132
+msgid "Personal Data"
+msgstr "Dati personali"
+
+#: ../data/ui/prefs.ui:136
+msgid "Wike will remember the history of visited articles"
+msgstr "Wike si ricorderà della cronologia degli articoli visitati"
+
+#: ../data/ui/prefs.ui:148 ../data/ui/prefs.ui:163
+msgid "Clear"
+msgstr "Pulisci"
+
+#: ../data/ui/prefs.ui:158
+msgid "Clear personal data"
+msgstr "Rimuovi dati personali"
+
+#: ../data/ui/prefs.ui:159
+msgid "Cookies and cache data will be deleted"
+msgstr "Dati sui cookie e cache saranno rimossi"
+
+#: ../src/view.py:161
+msgid "Try Again"
+msgstr "Prova di nuovo"
+
+#: ../src/prefs.py:81 ../data/ui/menu.ui:13
+msgid "Random Article"
+msgstr "Articolo casuale"
+
+#: ../src/prefs.py:81
+msgid "Last Article"
+msgstr "Ultimo articolo"
+
+#: ../src/bookmarks.py:46
+msgid "<b>No Bookmarks</b>\n"
+"\n"
+"<small>Use the <i>Add Bookmark</i> button\n"
+"or click a link with the middle mouse button\n"
+"to add bookmarks to the list</small>"
+msgstr "<b>Nessun segnalibro</b>\n"
+"\n"
+"<small>Utilizza il pulsante <i>Aggiungi segnalibro</i>\n"
+"oppure fai clic su un link con il pulsante centrale del mouse\n"
+"per aggiungere segnalibri all'elenco</small>"
+
+#: ../data/ui/header.ui:61
+msgid "Search articles"
+msgstr "Cerca articolo"
+
+#: ../data/ui/header.ui:95
+msgid "Bookmarks"
+msgstr "Segnalibri"
+
+#: ../data/ui/header.ui:117
+msgid "Table of contents"
+msgstr "Indice dei contenuti"
+
+#: ../data/ui/prefs.ui:184
+msgid "Filter Available Languages"
+msgstr "Filtra le lingue disponibili"
+
+#: ../data/ui/prefs.ui:218
+msgid "Select All"
+msgstr "Seleziona tutto"
+
+#: ../data/ui/prefs.ui:230
+msgid "Select None"
+msgstr "Non selezionare niente"
 
