--- a/po/cs.po
+++ b/po/cs.po
@@ -311,7 +311,7 @@ msgstr "Smazat data"
 
 #. Don't remove %s tag!
 #: ../src/wike-sp.in:71
-msgid "Search «%s» in Wikipedia"
+msgid "Search “%s” on Wikipedia"
 msgstr "Hledat «%s» na Wikipedii"
 
 #: ../data/ui/prefs.ui:23
