--- a/po/fi.po
+++ b/po/fi.po
@@ -313,7 +313,7 @@ msgstr "Tyhjennä tiedot"
 
 #. Don't remove %s tag!
 #: ../src/wike-sp.in:71
-msgid "Search «%s» in Wikipedia"
+msgid "Search “%s” on Wikipedia"
 msgstr "Etsi «%s» Wikipediasta"
 
 #: ../data/ui/prefs.ui:23
