--- a/po/fr.po
+++ b/po/fr.po
@@ -313,7 +313,7 @@ msgstr "Supprimer les données"
 
 #. Don't remove %s tag!
 #: ../src/wike-sp.in:71
-msgid "Search «%s» in Wikipedia"
+msgid "Search “%s” on Wikipedia"
 msgstr "Rechercher «%s» dans Wikipedia"
 
 #: ../data/ui/prefs.ui:23
