--- a/po/de.po
+++ b/po/de.po
@@ -314,7 +314,7 @@ msgstr "Daten löschen"
 
 #. Don't remove %s tag!
 #: ../src/wike-sp.in:71
-msgid "Search «%s» in Wikipedia"
+msgid "Search “%s” on Wikipedia"
 msgstr "bei Wikipedia nach „%s“ suchen"
 
 #: ../data/ui/prefs.ui:23
