--- a/po/el.po
+++ b/po/el.po
@@ -319,7 +319,7 @@ msgstr ""
 
 #. Don't remove %s tag!
 #: ../src/wike-sp.in:71
-msgid "Search «%s» in Wikipedia"
+msgid "Search “%s” on Wikipedia"
 msgstr ""
 
 #: ../data/ui/prefs.ui:23
