Update pt_BR.po (POEditor.com)

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -314,7 +314,7 @@ msgstr "Apagar dados"
 
 #. Don't remove %s tag!
 #: ../src/wike-sp.in:71
-msgid "Search «%s» in Wikipedia"
+msgid "Search “%s” on Wikipedia"
 msgstr "Pesquisar «%s» na Wikipédia"
 
 #: ../data/ui/prefs.ui:23
