--- a/po/es.po
+++ b/po/es.po
@@ -313,7 +313,7 @@ msgstr "Borrar datos"
 
 #. Don't remove %s tag!
 #: ../src/wike-sp.in:71
-msgid "Search «%s» in Wikipedia"
+msgid "Search “%s” on Wikipedia"
 msgstr "Buscar «%s» en Wikipedia"
 
 #: ../data/ui/prefs.ui:23
