--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+wike (1.5.6) focal; urgency=medium
+
+  * Translations & bug fixes
+
 wike (1.5.5) focal; urgency=medium
 
   * Small UI tweaks & translations
