--- a/po/fi.po
+++ b/po/fi.po
@@ -235,8 +235,8 @@ msgstr "Wike"
 
 #: ../data/com.github.hugolabe.Wike.desktop.in:4
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:8
-msgid "Wikipedia Reader"
-msgstr "Wikipedia-lukija"
+msgid "Search and read Wikipedia articles"
+msgstr "Hae ja lue Wikipedia-artikkeleita"
 
 #. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
