Update ru.po (POEditor.com)

--- a/po/ru.po
+++ b/po/ru.po
@@ -235,8 +235,8 @@ msgstr "Wike"
 
 #: ../data/com.github.hugolabe.Wike.desktop.in:4
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:8
-msgid "Wikipedia Reader"
-msgstr "Программа для чтения Википедии"
+msgid "Search and read Wikipedia articles"
+msgstr "Ищите и читайте статьи в Википедии"
 
 #. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
