--- a/po/es.po
+++ b/po/es.po
@@ -235,8 +235,8 @@ msgstr "Wike"
 
 #: ../data/com.github.hugolabe.Wike.desktop.in:4
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:8
-msgid "Wikipedia Reader"
-msgstr "Lector de Wikipedia"
+msgid "Search and read Wikipedia articles"
+msgstr "Buscar y leer artículos de Wikipedia"
 
 #. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
