Update sv.po (POEditor.com)

--- a/po/sv.po
+++ b/po/sv.po
@@ -235,8 +235,8 @@ msgstr "Wike"
 
 #: ../data/com.github.hugolabe.Wike.desktop.in:4
 #: ../data/com.github.hugolabe.Wike.metainfo.xml.in:8
-msgid "Wikipedia Reader"
-msgstr "Wikipedia-läsare"
+msgid "Search and read Wikipedia articles"
+msgstr "Sök och läs Wikipedia-artiklar"
 
 #. Don't remove semicolons!
 #: ../data/com.github.hugolabe.Wike.desktop.in:10
