Update sv.po (POEditor.com)

--- a/po/sv.po
+++ b/po/sv.po
@@ -429,13 +429,11 @@ msgid "<b>No Bookmarks</b>\n"
 "<small>Use the <i>Add Bookmark</i> button\n"
 "or press Ctrl+D to add\n"
 "the current article to the list</small>"
-msgstr "\n"
-"<b>Inga bokmärken</b>\n"
+msgstr "<b>Inga bokmärken</b>\n"
 "\n"
 "<small>Använd knappen <i>Lägg till bokmärke</i>\n"
 "eller tryck Ctrl+D för att lägga till\n"
-"aktuell artikel till listan</small>\n"
-""
+"aktuell artikel till listan</small>"
 
 #: ../data/ui/shortcuts.ui:96
 msgctxt "shortcut window"
