--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+wike (1.6.0) focal; urgency=medium
+
+  * New release with tabs and sepia mode
+
 wike (1.5.7) focal; urgency=medium
 
   * Translations
